--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,12 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# JetBrains IDE
+.idea/
+*.iml
+*.ipr
+*.iws
+
 # Flask stuff:
 instance/
 .webassets-cache
